# DeadManUltimateScraper

./: .env.example  .gitignore  DEADMAN_COMMAND_CENTER.ipynb  Dockerfile  Dockerfile.scraper  LICENSE  README.md  SECURITY_AUDIT_REPORT.md  USAGE_GUIDE.md  armory.py  central_scraper.py  docker-compose.yml  modal_app.py  parse_html.py  reddit_scraping_tools.json  requirements.txt  test_extractor_debug.py  test_quota_tracker.py  tmpclaude-441d-cwd  tor_metrics.json
.github/scripts/: scrape.py
.github/workflows/: scrape.yml
cli/: __init__.py  darkweb_commands.py  deep_commands.py  main.py
config/: default.yaml
core/: README.md  mission_rebirth.py
core/cli/: main_fixed.py
dashboard/: Dockerfile  package.json
dashboard/public/: index.html
dashboard/src/: App.js  index.js
deadman_scraper/: __init__.py  worker.py
deadman_scraper/ai/: __init__.py  optimized_clients.py
deadman_scraper/analytics/: __init__.py  sentiment.py
deadman_scraper/bypass/: __init__.py  chain.py  cookies.py  extract.py
deadman_scraper/core/: config.py  engine.py  recursive.py  scheduler.py
deadman_scraper/darkweb/: __init__.py  crawler.py  engine.py  media.py  meta_search.py
deadman_scraper/extract/: extractor.py
deadman_scraper/fetch/: __init__.py  downloader.py  tor.py  tor_manager.py
docker/: mongo-init.js
docs/: DARKWEB_RESEARCH_PLAN.md  SCRAPER_ENHANCEMENTS_GUIDE.md  TOR_INTEGRATION_SOLUTIONS.md  ULTIMATE_BOT_BYPASS_GUIDE.md
public/: index.html
results/: raw_response.html  scrape_results.json
scraper/: DESIGN_SPECIFICATION.md  README.md  STYLE_GUIDE.md  central_scraper.py  full_system_test.py  pyproject.toml  requirements.txt  supreme_recap.py
scraper/cli/: main.py  main.py.bak  tmpclaude-e82e-cwd
scraper/deadman_scraper/ai/: llm_router.py  relevance.py
scraper/deadman_scraper/core/: __init__.py  config.py  deduplicator.py  engine.py  mission.py  persistent_queue.py
scraper/deadman_scraper/discovery/: __init__.py
scraper/deadman_scraper/fetch/: proxy_manager.py  tor_enhanced.py
scraper/deadman_scraper/mcp/: server.py
scraper/deadman_scraper/scrapers/: __init__.py  internet.py  sentinel.py
scraper/deadman_scraper/security/: redbox.py
scraper/deadman_scraper/stealth/: __init__.py  behavior.py  headers.py  session.py  websocket_tunnel.py
scraper/deadman_scraper/utils/: cleanup.py  health.py  media.py  stack_helper.py  static_analysis.py
scraper/tests/unit/: test_central_scraper.py  test_fingerprint.py  test_proxy_manager.py
server/: .env.example  Dockerfile  index.js  package.json
server/db/: mongodb.js  (+1 more)
src/: App.tsx
tor/: tmpclaude-31c6-cwd  tor-expert.zip.REMOVED.git-id  torrc
wordlists/: .gitignore  README.md
(+65 files in other folders)
