[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadman-scraper"
version = "2.0.0"
description = "DEADMAN ULTIMATE SCRAPER - NASA Standard Absolute Freedom Edition"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DeadMan", email = "deadmanposts@gmail.com" }
]
keywords = ["scraping", "web-scraping", "tor", "stealth", "ai", "llm", "nasa-standard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core HTTP
    "httpx>=0.27.0",
    "curl-cffi>=0.7.0",
    "aiohttp>=3.9.0",

    # Browser Automation
    "playwright>=1.40.0",
    "undetected-chromedriver>=3.5.0",
    "selenium>=4.15.0",
    "nodriver>=0.30",

    # Parsing & Extraction
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "selectolax>=0.3.0",
    "parsel>=1.8.0",

    # TOR & Proxy
    "PySocks>=1.7.0",
    "stem>=1.8.0",

    # AI/LLM
    "openai>=1.0.0",
    "mistralai>=0.4.0",
    "groq>=0.4.0",
    "ollama>=0.1.0",

    # Data Processing
    "pandas>=2.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",

    # Database
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Async
    "anyio>=4.0.0",
    "asyncio-throttle>=1.0.0",

    # Fingerprinting & Stealth
    "fake-useragent>=1.4.0",

    # MCP Server
    "mcp>=1.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "xxhash>=3.4.0",
    "tldextract>=5.1.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
deadman = "cli.main:app"

[project.urls]
Homepage = "https://github.com/DeadManOfficial/DeadManUltimateScraper"
Documentation = "https://github.com/DeadManOfficial/DeadManUltimateScraper#readme"
Repository = "https://github.com/DeadManOfficial/DeadManUltimateScraper"

[tool.hatch.build.targets.wheel]
packages = ["deadman_scraper", "cli"]
include = ["central_scraper.py"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
